--- a/app/src/main/res/drawable/selector_bt_bg.xml
+++ b/app/src/main/res/drawable/selector_bt_bg.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_pressed="true">
+    <item android:state_enabled="true">
         <shape>
             <corners android:radius="8dp"/>
             <solid android:color="@color/color_lightgreen"/>
         </shape>
     </item>
-    <item android:state_pressed="false">
+    <item android:state_enabled="false">
         <shape>
             <corners android:radius="8dp"/>
-            <solid android:color="@color/color_lightgreen"/>
+            <solid android:color="@color/color_btton_gray"/>
         </shape>
     </item>
 </selector>
