--- a/app/src/main/res/layout/activity_config_url.xml
+++ b/app/src/main/res/layout/activity_config_url.xml
@@ -18,6 +18,7 @@
         app:contentInsetStart="0dp">
 
         <RelativeLayout
+            android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:background="@color/colorPrimary">
@@ -25,11 +26,12 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
                 android:gravity="center"
                 android:text="设置服务器地址"
                 android:textColor="#fff"
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                android:layout_centerVertical="true"
+                android:layout_centerHorizontal="true" />
 
         </RelativeLayout>
     </android.support.v7.widget.Toolbar>
@@ -45,7 +47,21 @@
             android:layout_margin="@dimen/margin_normal"
             android:gravity="center_vertical">
 
+
+            <com.example.msystem.widget.EditTextIpAddress
+                android:id="@+id/et_address"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="40dp"
+                android:layout_gravity="center_vertical"
+                android:background="@null"
+                android:hint="@string/input_server_ip_address"
+                android:inputType="textVisiblePassword"
+                tools:ignore="TextFields" />
+
+
             <EditText
+                android:visibility="gone"
                 android:id="@+id/edtURL"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -59,12 +75,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/margin_small"
-                android:text="测试" />
+                android:text="设置" />
+
         </LinearLayout>
 
     </FrameLayout>
 
     <Button
+        android:visibility="gone"
         android:id="@+id/btnSave"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
